--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.quan_li_nha_hang/com.example.quan_li_nha_hang.HelloApplication
+                            <mainClass>com.example.quan_li_nha_hang/ui.datban
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
